[gd_scene load_steps=13 format=3 uid="uid://b3h8pk8u5d68y"]

[ext_resource type="Texture2D" uid="uid://cfhoqgmv7lfe5" path="res://addons/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_bjlwv"]
[ext_resource type="Script" path="res://ui/game_over_ui.gd" id="1_d133e"]
[ext_resource type="Texture2D" uid="uid://d0bfyj8xravfc" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_h7i28"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gjisn"]
texture = ExtResource("1_bjlwv")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2

[sub_resource type="SystemFont" id="SystemFont_1hsad"]
font_names = PackedStringArray("Javanese Text")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_orp01"]
font = SubResource("SystemFont_1hsad")
font_size = 48

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kgltw"]
texture = ExtResource("2_h7i28")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_ofut2"]
font_names = PackedStringArray("Javanese Text")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_h4l88"]
font = SubResource("SystemFont_ofut2")
font_size = 32
font_color = Color(0.051971, 0.051971, 0.051971, 1)

[sub_resource type="Animation" id="Animation_y3cua"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.713726)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(351, 49)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(315, 362)]
}

[sub_resource type="Animation" id="Animation_24kif"]
resource_name = "default"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.353553, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.713726)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(351, -107), Vector2(351, 49)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 1.5),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [Vector2(315, 659), Vector2(315, 362)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d5xgg"]
_data = {
"RESET": SubResource("Animation_y3cua"),
"default": SubResource("Animation_24kif")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_d133e")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.713726)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 351.0
offset_top = 49.0
offset_right = 801.0
offset_bottom = 147.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gjisn")

[node name="GameOverLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.5
offset_top = -54.5
offset_right = 144.5
offset_bottom = 54.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_orp01")

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 315.0
offset_top = 362.0
offset_right = 837.0
offset_bottom = 552.999
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_kgltw")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -87.5
offset_right = 196.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
columns = 2

[node name="Label" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Tempo Vivo: "
label_settings = SubResource("LabelSettings_h4l88")

[node name="LabelTempo" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "14:19"
label_settings = SubResource("LabelSettings_h4l88")

[node name="Label2" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monstros Derrotados:"
label_settings = SubResource("LabelSettings_h4l88")

[node name="LabelMonstros" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "23551"
label_settings = SubResource("LabelSettings_h4l88")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d5xgg")
}
autoplay = "default"
